apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  ports:
    - port: 6767
      targetPort: 6767
  selector:
    app: bazarr
